# favhid-client

./: .gitignore  CMakeLists.txt  README.md
src/: Arduino.cpp  CMakeLists.txt  OpaqueID.cpp  easytest.cpp  generate-random-ids.cpp  io.cpp  randomize-serial-number.cpp  rawtest.cpp  test-dynamic-descriptor.cpp  test-favjoystate2-dinput-style.cpp  test-favjoystate2-report.cpp  test-favjoystate2.cpp  test-raw.cpp
src/favhid/: descriptors.hpp  io.hpp  protocol.hpp
src/include/favhid/: Arduino.hpp  FAVJoyState2.hpp  descriptors.hpp  protocol.hpp
src/lib/: Arduino.cpp  CMakeLists.txt  FAVJoyState2.cpp  OpaqueID.cpp
